intel/bench_214_work/extr_.FFmpeglibavfiltervf_colorbalance.c_apply_lut8_p_with_main/log.txt
bench_214_work/extr_.FFmpeglibavfiltervf_colorbalance.c_apply_lut8_p_with_main/extr_.FFmpeglibavfiltervf_colorbalance.c_apply_lut8_p_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.FFmpeglibavfiltervf_colorbalance.c_apply_lut8_p_with_main/extr_.FFmpeglibavfiltervf_colorbalance.c_apply_lut8_p_with_main.c:35:17: error: cannot initialize a variable of type 'ThreadData *' (aka 'TYPE_7__ *') with an lvalue of type 'void *'
    ThreadData *td = arg;
                ^    ~~~
2 errors generated.
HLS FPGA Parse FAILED.
